continueing with presentation

--- a/presentations/esri_uc_2014_webmap_labeling/examples/esri_dojo_simple_base1.html
+++ b/presentations/esri_uc_2014_webmap_labeling/examples/esri_dojo_simple_base1.html
@@ -30,6 +30,7 @@ var map1;
 
       map = new Map("map", {
         zoom: 5,
+        logo:false 
       });
 
       var basemap_tile_service = "http://gis.measuredhs.com/arcgis/rest/services/production/MeasureDHS_PlainBaseTiles/MapServer";
