--- a/presentations/esri_uc_2014_webmap_labeling/examples/esri_dojo_simple_base2.html
+++ b/presentations/esri_uc_2014_webmap_labeling/examples/esri_dojo_simple_base2.html
@@ -20,7 +20,6 @@
   </style>
   <script src="//js.arcgis.com/3.9/"></script>
   <script>
-var map;
     require([
       "esri/map", 
       "dojo/domReady!"
@@ -28,8 +27,9 @@ var map;
       Map
     )  {
 
-      map = new Map("map", {
+      var map = new Map("map", {
         zoom: 5,
+        logo:false 
       });
 
       var basemap_tile_service = "http://gis.measuredhs.com/arcgis/rest/services/production/MeasureDHS_PlainBaseTiles/MapServer";
