--- a/presentations/esri_uc_2014_webmap_labeling/examples/esri_leaflet_basemap_example.html
+++ b/presentations/esri_uc_2014_webmap_labeling/examples/esri_leaflet_basemap_example.html
@@ -14,6 +14,9 @@
   <style>
     body {margin:0;padding:0;}
     #map {position: absolute;top:0;bottom:0;right:0;left:0;}
+    .leaflet-container {
+      background-color:rgba(255,0,0,0.0);
+  }
   </style>
 </head>
 <body>
